--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-sharp": "^0.6.2",
