--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,21 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "dompurify": "^2.4.0",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.15",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
