--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dropzone": "^14.2.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-rte": "^0.16.5",
