--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.4",
     "@craco/craco": "^6.4.5",
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@react-oauth/google": "^0.2.6",
@@ -17,6 +19,7 @@
     "dompurify": "^2.4.0",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
+    "framer-motion": "^7.3.6",
     "jodit-react": "^1.3.15",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -24,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.2",
+    "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
