--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "multer-sharp": "^0.6.2",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "sharp": "^0.30.7"
   }
