--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-blurhash": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazyload": "^3.2.0",
     "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
