--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@iconscout/react-unicons": "^1.1.6",
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,13 +24,16 @@
     "jodit-react": "^1.3.15",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.2",
+    "react-emoji": "^0.5.0",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-input-emoji": "^4.2.0",
     "react-lazyload": "^3.2.0",
     "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
@@ -37,12 +41,15 @@
     "react-router-dom": "^6.3.0",
     "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
+    "socket.io-client": "^4.5.2",
     "styled-components": "^5.3.5",
     "tailwind-react-ui": "^0.8.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
