--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/react": "^2.3.4",
     "@craco/craco": "^6.4.5",
     "@emotion/react": "^11.10.4",
@@ -44,6 +45,7 @@
     "react-scroll-to-bottom": "^4.2.0",
     "react-select": "^5.4.0",
     "react-spinners": "^0.13.4",
+    "react-timeago": "^7.1.0",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "socket.io-client": "^4.5.2",
